tests/miniJava/neg/004269_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { false int [] java ( ) { return 0 ; } }
